# fastapi-vision-service

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CHECKLIST.md  CONTRIBUTING.md  DEVELOPMENT.md  Dockerfile  LICENSE  Makefile  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  START_HERE.md  decode_image.py  decode_simple.py  docker-compose.yml  env.example  examples_client.py  pyproject.toml  run_demo.bat  run_simple_test.bat  run_t2i.bat  run_t2i.sh  run_test.bat  run_vl.bat  run_vl.sh  我的学习计划.md  零基础学习路线图.md  🎉_项目交付清单.md  🎓_从这里开始学习.md  📖_项目文件导航.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
app/: __init__.py  config.py  main.py  queue.py  simple_test.py
app/models/: __init__.py  t2i_hunyuan.py  vl_qwen.py
app/routers/: __init__.py  t2i.py  t2i_demo.py  t2i_simple.py  vl.py
src/fastapi_vision_service/: __init__.py
tests/: __init__.py  test_health.py  test_mode.py  test_performance.py
